// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Options should forward yup options correctly 1`] = `
Object {
  "data": Object {
    "AddUser": Object {
      "error": "age must be greater than or equal to 18",
      "user": null,
    },
  },
}
`;

exports[`Options should transform args only when specified 1`] = `
Object {
  "data": Object {
    "AddUser": Object {
      "error": null,
      "user": Object {
        "age": 18,
        "firstName": " Jon ",
        "id": 3,
        "lastName": " Doe ",
      },
    },
  },
}
`;

exports[`Options should transform args only when specified 2`] = `
Object {
  "data": Object {
    "AddUser": Object {
      "error": null,
      "user": Object {
        "age": 18,
        "firstName": "Jon",
        "id": 3,
        "lastName": "Doe",
      },
    },
  },
}
`;

exports[`Options should use validationOptions from mutation definition if present 1`] = `
Object {
  "data": Object {
    "AddUserWithOptions": Object {
      "error": "age must be greater than or equal to 18",
      "user": null,
    },
  },
}
`;

exports[`should give error if not using middleware correctly 1`] = `
Array [
  [GraphQLError: You have to call the yupMutationMiddleware before adding it to the middlewares: yupMutationMiddleware()],
]
`;

exports[`should validate correctly - custom error - error 1`] = `
Object {
  "data": Object {
    "AddUserErrorCustom": Object {
      "errors": Array [
        "3 errors occurred",
        "firstName must be at least 1 characters",
        "lastName must be at least 1 characters",
        "age must be greater than or equal to 18",
      ],
      "user": null,
    },
  },
}
`;

exports[`should validate correctly - custom error - pass 1`] = `
Object {
  "data": Object {
    "AddUserErrorCustom": Object {
      "errors": null,
      "user": Object {
        "age": 18,
        "firstName": "Jon",
        "id": 3,
        "lastName": "Doe",
      },
    },
  },
}
`;

exports[`should validate correctly - extensions field - object error - error 1`] = `
Object {
  "data": Object {
    "AddUserErrorObjectExtensions": Object {
      "error": Object {
        "details": Array [
          Object {
            "errors": Array [
              "firstName must be at least 1 characters",
            ],
            "field": "firstName",
          },
          Object {
            "errors": Array [
              "lastName must be at least 1 characters",
            ],
            "field": "lastName",
          },
          Object {
            "errors": Array [
              "age must be greater than or equal to 18",
            ],
            "field": "age",
          },
        ],
        "message": "3 errors occurred",
      },
      "user": null,
    },
  },
}
`;

exports[`should validate correctly - extensions field - object error - pass 1`] = `
Object {
  "data": Object {
    "AddUserErrorObjectExtensions": Object {
      "error": null,
      "user": Object {
        "age": 18,
        "firstName": "Jon",
        "id": 3,
        "lastName": "Doe",
      },
    },
  },
}
`;

exports[`should validate correctly - object error - error 1`] = `
Object {
  "data": Object {
    "AddUserErrorObject": Object {
      "error": Object {
        "details": Array [
          Object {
            "errors": Array [
              "firstName must be at least 1 characters",
            ],
            "field": "firstName",
          },
          Object {
            "errors": Array [
              "lastName must be at least 1 characters",
            ],
            "field": "lastName",
          },
          Object {
            "errors": Array [
              "age must be greater than or equal to 18",
            ],
            "field": "age",
          },
        ],
        "message": "3 errors occurred",
      },
      "user": null,
    },
  },
}
`;

exports[`should validate correctly - object error - pass 1`] = `
Object {
  "data": Object {
    "AddUserErrorObject": Object {
      "error": null,
      "user": Object {
        "age": 18,
        "firstName": "Jon",
        "id": 3,
        "lastName": "Doe",
      },
    },
  },
}
`;

exports[`should validate correctly - string error - error 1`] = `
Object {
  "data": Object {
    "AddUser": Object {
      "error": "3 errors occurred",
      "user": null,
    },
  },
}
`;

exports[`should validate correctly - string error - pass 1`] = `
Object {
  "data": Object {
    "AddUser": Object {
      "error": null,
      "user": Object {
        "age": 18,
        "firstName": "Jon",
        "id": 3,
        "lastName": "Doe",
      },
    },
  },
}
`;
